--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,1 +1,6 @@
 /* write your override styles here */
+.background-none {background: none !important;}
+/*!important should only be used sparringly*/
+/*Find atleast two other ways to do the same thhing*/
+/*This lesson needs a recap. I will save some time and try to redo this*/
+/*Call Adebate tomorrow, also call Jay the same day*/
